--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,10 @@
         <h2>Made by Axel (ChunXela) TE20D</h2>
       </div>
       <div class="chat_box chatbox_grid">
+	      <div class="message_template flex_template">
+	      	<img src="" alt="">
+		<p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+	      </div>
         <div class="user_input user_input_flex">
           <input name="Message" id="" placeholder="Message"></input>
         </div>
