finishing front end

--- a/Index.html
+++ b/Index.html
@@ -9,19 +9,81 @@
   </head>
   <body>
     <main class="main_grid">
-      <div class="left_side">
+      <aside class="left_side">
         <h1>Welcome to The NTI live Chat</h1>
         <h2>Made by Axel (ChunXela) TE20D</h2>
-      </div>
-      <div class="chat_box chatbox_grid">
-	      <div class="message_template flex_template">
-	      	<img src="" alt="">
-		<p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
-	      </div>
-        <div class="user_input user_input_flex">
-          <input name="Message" id="" placeholder="Message"></input>
-        </div>
-      </div>
+      </aside>
+      <section class="chat_box chatbox_grid">
+        <article class="message_area flex_message_area">
+          <div class="message_template flex_template">
+            <img class="user_profile_img" src="https://www.svgrepo.com/show/496707/user-square.svg">
+            <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+          </div>
+          
+          <div class="message_template flex_template">
+            <img class="user_profile_img" src="https://www.svgrepo.com/show/496707/user-square.svg">
+            <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+          </div>
+          <div class="message_template flex_template">
+            <img class="user_profile_img" src="https://www.svgrepo.com/show/496707/user-square.svg">
+            <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+          </div>
+          <div class="message_template flex_template">
+            <img class="user_profile_img" src="https://www.svgrepo.com/show/496707/user-square.svg">
+            <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+          </div>
+          <div class="message_template flex_template">
+            <img class="user_profile_img" src="https://www.svgrepo.com/show/496707/user-square.svg">
+            <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+          </div>
+          <div class="message_template flex_template">
+            <img class="user_profile_img" src="https://www.svgrepo.com/show/496707/user-square.svg">
+            <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+          </div>
+          <div class="message_template flex_template">
+            <img class="user_profile_img" src="https://www.svgrepo.com/show/496707/user-square.svg">
+            <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+          </div>
+          <div class="message_template flex_template">
+            <img class="user_profile_img" src="https://www.svgrepo.com/show/496707/user-square.svg">
+            <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+          </div>
+
+          <div class="message_template flex_template">
+            <img class="user_profile_img" src="https://www.svgrepo.com/show/496707/user-square.svg">
+            <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+          </div>
+          <div class="message_template flex_template">
+            <img class="user_profile_img" src="https://www.svgrepo.com/show/496707/user-square.svg">
+            <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+          </div>
+          <div class="message_template flex_template">
+            <img class="user_profile_img" src="https://www.svgrepo.com/show/496707/user-square.svg">
+            <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+          </div>
+          <div class="message_template flex_template">
+            <img class="user_profile_img" src="https://www.svgrepo.com/show/496707/user-square.svg">
+            <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+          </div>
+          <div class="message_template flex_template">
+            <img class="user_profile_img" src="https://www.svgrepo.com/show/496707/user-square.svg">
+            <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+          </div>
+          <div class="message_template flex_template">
+            <img class="user_profile_img" src="https://www.svgrepo.com/show/496707/user-square.svg">
+            <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+          </div>
+          <div class="message_template flex_template">
+            <img class="user_profile_img" src="https://www.svgrepo.com/show/496707/user-square.svg">
+            <p>Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum sint consectetur cupidatat.</p>
+          </div>
+        </article>   
+        
+      <section class="user_input user_input_flex">
+        <input name="Message" id="" placeholder="Message"></input>
+      </section>       
+      </article>
+      </section>
     </main>
   </body>
 </html>
